# file-transmute

./: .gitignore  routes.py
html/: index.html
scss/javascripts/: site.js
scss/sass/: styles.scss
scss/stylesheets/: styles.css
static/: css  fonts  js
static/html/: index.html
transmute-server/: LICENSE  transmute-server.cabal
transmute-server/src/: Main.hs
