Name:                transmute-server
Version:             0.1
Synopsis:            filetransmute.com server
Description:         Server for filetransmute.com
License:             AllRightsReserved
Author:              Andrew Gibiansky
Maintainer:          andrew.gibiansky@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.10

Executable transmute-server
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.10,
    snap-server               >= 0.9   && < 0.10,
    aeson                     >= 0.8   && < 0.9,
    postmark                  >= 0.1   && < 0.2,
    transformers              >= 0.4   && < 0.5,
    text                      >= 1.2   && < 1.3

  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields

  default-extensions: DoAndIfThenElse
  default-language: Haskell2010
